Solve10/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name:  app    
  labels:
    app: deploy
