Solve10/deploy-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend 
  labels:
    app: back
  namespace: app                     
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back
  template:
    metadata:
      labels:
        app: back
    spec:
      containers:
        - name: multitool
          image: praqma/network-multitool:alpine-extra
          ports:
            - containerPort: 80
              name: port
