Solve10/deploy-cache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache
  labels:
    app: cache 
  namespace: app                     
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cache
  template:
    metadata:
      labels:
        app: cache
    spec:
      containers:
        - name: multitool
          image: praqma/network-multitool:alpine-extra
          ports:
            - containerPort: 80
              name: port
