Solve10/deploy-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:                   
    app: front          
  namespace: app                     
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front        
        app1: front-test
    spec:
      containers:
        - name: multitool
          image: praqma/network-multitool:alpine-extra
          ports:
            - containerPort: 80
              name: port
