Solve10/policy-allow-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: policy-back
  namespace: app
spec:
  podSelector: 
    matchLabels:
      app: back
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: front
      ports:
        - protocol: TCP
          port: 80
    - from:
        - podSelector:
            matchLabels:
              app: test
      ports:
        - protocol: TCP
          port: 80
