Solve10/policy-allow-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: policy-front
  namespace: app
spec:
  podSelector: 
    matchLabels:
      app: front
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: test
