Solve10/policy-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: policy-deny
  namespace: app
spec:
  podSelector: {}
  policyTypes:
    - Ingress
