Solve10/policy-icmp.yaml
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: allow-icmp-deployment
  namespace: app
spec:
  selector: app == back
  ingress:
  - action: Allow
    protocol: ICMP
